[package]
name = "cellardoor"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
udev = { version = "0.8.0", features = ["mio08"] }
mio = "0.8.11"
reqwest = { version = "0.12.5", features = ["blocking"] }
dashmap = { version = "6.0.1", features = ["serde"] }
clap = { version = "4.5.8", features = ["derive", "env"] }
log = "0.4.22"
log4rs = "1.3.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_yaml_ng = "0.10.0"
